coverslot collapsed padding fix

--- a/Comfy/app.css
+++ b/Comfy/app.css
@@ -249,7 +249,7 @@
   border-radius: 0 !important;
 }
 :root .Root__nav-bar .main-yourLibraryX-libraryIsExpanded.main-yourLibraryX-libraryIsCollapsed {
-  padding-bottom: 0 !important;
+  padding-bottom: 272px !important;
 }
 :root .Root__nav-bar .os-scrollbar {
   display: none;
